# sna_project

./: README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  config.py  logging_config.yml  mypy.ini  pyproject.toml  start.sh
api/migrations/: env.py
api/migrations/versions/: bf6f9aa0fd7b_add_tasks_table.py
api/src/: app.py  auto_config.py  base_classes.py  containers.py  custom_logging.py  db.py  exceptions.py  runmigrations.py  runserver.py  util.py
api/src/modules/tasks/: crud.py  models.py  routes.py  schema.py  service.py
frontend/: .editorconfig  .eslintrc.js  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
frontend/src/components/: CreateTaskForm.tsx  Link.tsx  Pagination.tsx  SEO.tsx  TaskCard.tsx
frontend/src/data/: apiConfig.ts  siteMetadata.ts
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx
frontend/src/pages/tasks/: index.tsx
frontend/src/requests/: client.ts  tasks.ts  util.ts
frontend/src/types/: Pagination.ts  Task.ts
nginx/: Dockerfile  nginx.conf
